tests/types/errors/map_index_option_not_assignable.err
1. error[T008]: type mismatch: expected int, got option[int]
  --> tests/types/errors/map_index_option_not_assignable.mochi:4:16

  4 | let bad: int = m["a"]
    |                ^

help:
  Change the value to match the expected type.
